Kernel density estimate started

--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3 as sl\n",
     "from sklearn.neighbors import KernelDensity\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from datetime import datetime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -42,25 +43,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2024-02-26T11:06:21.562Z', '2024-02-26T12:10:30.829Z', '2024-02-26T12:10:55.688Z', '2024-02-26T12:10:56.827Z', '2024-02-26T12:12:41.265Z', '2024-02-26T12:12:43.925Z', '2024-02-26T12:12:49.207Z', '2024-02-26T12:12:51.135Z', '2024-02-26T12:13:39.792Z']\n"
+      "['b21c36e9-0997-4c3e-8dea-0ca2a83e75c2', 'a48c3dc0-bdc1-454e-aad5-bfbe6974e0b8', 'a48c3dc0-bdc1-454e-aad5-bfbe6974e0b8', 'a48c3dc0-bdc1-454e-aad5-bfbe6974e0b8', '8e1ee910-353f-4859-bffa-392492c6a0b8', '8e1ee910-353f-4859-bffa-392492c6a0b8', '8e1ee910-353f-4859-bffa-392492c6a0b8', '8e1ee910-353f-4859-bffa-392492c6a0b8', '8e1ee910-353f-4859-bffa-392492c6a0b8', '3f9a385d-8bc8-4a7d-b3c7-bc0286810822', '3f9a385d-8bc8-4a7d-b3c7-bc0286810822', '6144fd5a-78c5-4b8a-9967-ba50c0367d03', '6144fd5a-78c5-4b8a-9967-ba50c0367d03', '6144fd5a-78c5-4b8a-9967-ba50c0367d03', '6144fd5a-78c5-4b8a-9967-ba50c0367d03', '6144fd5a-78c5-4b8a-9967-ba50c0367d03', '6144fd5a-78c5-4b8a-9967-ba50c0367d03']\n",
+      "['2024-02-26T11:06:21.562Z', '2024-02-26T12:10:30.829Z', '2024-02-26T12:10:55.688Z', '2024-02-26T12:10:56.827Z', '2024-02-26T12:12:41.265Z', '2024-02-26T12:12:43.925Z', '2024-02-26T12:12:49.207Z', '2024-02-26T12:12:51.135Z', '2024-02-26T12:13:39.792Z', '2024-02-26T13:41:46.248Z', '2024-02-26T13:41:48.040Z', '2024-02-26T13:42:28.430Z', '2024-02-26T13:42:28.789Z', '2024-02-26T13:42:29.003Z', '2024-02-26T13:42:29.225Z', '2024-02-26T13:44:11.690Z', '2024-02-26T13:44:12.191Z']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 2, 26, 11, 6, 21, 562000)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "clicks = [a[1] for a in cur.execute(\"SELECT * FROM clicks\")]\n",
-    "print(clicks)"
+    "userIds = [a[0] for a in cur.execute(\"SELECT * FROM clicks\")]\n",
+    "timestamps = [a[1] for a in cur.execute(\"SELECT * FROM clicks\")]\n",
+    "print(userIds)\n",
+    "print(timestamps)\n",
+    "datetime.strptime(timestamps[0], \"%Y-%m-%dT%H:%M:%S.%fZ\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
